// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CNavbar renders correctly 1`] = `
<button
  class="c-navbar-toggler"
  type="button"
>
  <span
    class="c-navbar-toggler-icon"
  />
</button>
`;

exports[`CNavbar renders correctly 2`] = `
<button
  class="c-navbar-toggler"
  fill="true"
  justified="true"
  pills="true"
  type="button"
  vertical="true"
>
  CNavbar items
</button>
`;
